--- a/package.json
+++ b/package.json
@@ -3,12 +3,16 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
+    // "start": "ng serve --proxy-config proxy.conf.json",
     "start": "node server.js",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
     "postinstall": "ng build --aot -prod"
+  },
+  "engines": {
+    "node": "10.3.0"
   },
   "private": true,
   "dependencies": {
