--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
     "postinstall": "ng build --aot --prod"
   },
   "engines": {
-    "node": "6.11.0",
-    "npm": "3.10.10"
+    "node": "10.3.0",
+    "npm": "6.x"
   },
   "private": true,
   "dependencies": {
