--- a/package.json
+++ b/package.json
@@ -4,16 +4,15 @@
   "scripts": {
     "ng": "ng",
     "start": "node server.js",
-    "postinstall": "ng build --aot --prod",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "postinstall": "ng build --aot --prod"
   },
   "engines": {
     "node": "10.3.0",
-    "npm": "6.x",
-    "yarn": "1.x"
+    "npm": "6.x"
   },
   "private": true,
   "dependencies": {
